Add styles for <blockquote>

--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -72,6 +72,10 @@ article {
         margin: 12px 0;
     }
 
+    blockquote {
+        margin: 12px;
+    }
+
     img {
         max-width: 100%;
         height: auto;
