Add "quiet" text color

--- a/assets/globals.less
+++ b/assets/globals.less
@@ -10,6 +10,7 @@
 
 @content_background_color: white;
 @content_text_color: rgb(40, 40, 40);
+@quiet_text_color: lighten(@content_text_color, 40%);
 
 @logo_orange_light: #f17e31;
 @logo_orange: #fb6500;
