--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -24,7 +24,7 @@
         text-decoration: none;
 
         .meta {
-            color: lighten(@text_color, 40%);
+            color: @quiet_text_color;
         }
     }
 }
