--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -66,7 +66,7 @@ article {
         margin: 12px 0;
     }
     .meta {
-        color: lighten(@content_text_color, 40%);
+        color: @quiet_text_color;
     }
     p {
         margin: 12px 0;
@@ -83,6 +83,6 @@ article {
 
     hr {
         margin: 16px 32px;
-        border: 2px solid @text_color;
+        border: 2px solid @quiet_text_color;
     }
 }
