Make content text black
This improves contrast on poor screens.

--- a/assets/globals.less
+++ b/assets/globals.less
@@ -9,7 +9,7 @@
 @toolbar_background_color: darken(@content_background_color, 10%);
 
 @content_background_color: white;
-@content_text_color: rgb(40, 40, 40);
+@content_text_color: black;
 @quiet_text_color: lighten(@content_text_color, 40%);
 
 @logo_orange_light: #f17e31;
