Ability to add labels
Kinda ugly, but it works.

--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -2,26 +2,58 @@
 
 .inventory-view {
     .label-picker {
-        margin: 80px;
+        margin: 40px;
         .content-colors;
+        flex-flow: column nowrap;
 
-        .options {
-            max-height: 80vh;
+        header {
+            display: flex;
+            flex: 0 0 auto;
+            height: 40px;
+
+            h1 {
+                flex: 1 1 0;
+                font: inherit;
+                padding: 8px;
+                margin: 0;
+                min-width: 0;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+            button {
+                flex: none;
+                width: 40px;
+                height: 40px;
+                margin: 0;
+                padding: 0;
+            }
+        }
+
+        .center {
+            flex: 1 1 auto;
+            min-height: 0;
+            overflow: hidden;
             overflow-y: auto;
+            max-height: calc(100vh - 80px - 80px);
+
+            button {
+                display: block;
+                width: 100%;
+                padding: 8px;
+            }
         }
 
-        button {
-            display: block;
-            margin: 0;
-            width: 100%;
-            padding: 8px;
-            border: 0;
-            background: transparent;
-        }
+        footer {
+            flex: 0 0 auto;
 
-        .cancel {
-            background: orange;
-            color: white;
+            button {
+                display: block;
+                width: 100%;
+                padding: 8px;
+                background: orange;
+                color: white;
+            }
         }
     }
 }
