--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -1,6 +1,19 @@
 @import "../globals.less";
 
 .inventory-view {
+    .feed {
+        .content-colors;
+        margin: 2px;
+        padding: 4px;
+
+        h2 {
+            font-size: 1.5rem;
+            margin: 0 0 .5rem 0;
+            padding: 0;
+            font-weight: normal;
+        }
+    }
+
     .label-picker {
         margin: 40px;
         .content-colors;
