--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -70,3 +70,16 @@
         }
     }
 }
+
+.add-feed-view {
+    form {
+        .content-colors;
+        display: flex;
+        padding: 4px;
+
+        input[type=url] {
+            flex: 1 1 0;
+            min-width: 0;
+        }
+    }
+}
