--- a/assets/globals.less
+++ b/assets/globals.less
@@ -106,6 +106,11 @@
         margin: 0 4px 0 0;
     }
 }
+.text-button-left {
+    & > .button {
+        margin: 0 0 0 4px;
+    }
+}
 
 .global-tools {
     display: flex;
