AddFeedView: Make functional
This is still quite rudimentary, but good enough for now.

--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -72,14 +72,18 @@
 }
 
 .add-feed-view {
-    form {
+    .form {
         .content-colors;
-        display: flex;
+        margin: 2px;
         padding: 4px;
 
-        input[type=url] {
-            flex: 1 1 0;
-            min-width: 0;
+        form {
+            display: flex;
+
+            input[type=url] {
+                flex: 1 1 0;
+                min-width: 0;
+            }
         }
     }
 }
