Unify templates, remove old CSS, icons
...but replace them with a bunch of horrible hacks.

* Terrible FOUC on login pages as CSS is only in the JS bundle.
* Login pages are mostly unstyled.
* Bundle JS is loaded on every page, despite being huge and unused.

I briefly tried using extract-text-webpack-plugin, but the world has
apparently long moved on from Webpack 1.x. I think that it will be
easiest to just rewrite the Webpack config from scratch (there's not
much there right now, after all).

Closes #51.

--- a/yarrharr/templates/about.html
+++ b/yarrharr/templates/about.html
@@ -5,12 +5,11 @@
     <p>Yarrharr is a simple, self-hosted feed reader.</p>
     <h2>What's inside?</h2>
     <p>Yarrharr {{ yarrharr_version }}
-    <p><a href="http://radiac.net/projects/django-yarr/">django-yarr</a> {{ yarr_version }}
     <p><a href="https://www.djangoproject.com/">Django</a> {{ django_version }}
     <p><a href="https://pypi.python.org/pypi/feedparser">feedparser</a> {{ feedparser_version }}
-    <p><a href="https://git.gnome.org/browse/gnome-icon-theme-symbolic/">GNOME Symbolic Icons</a> by <a href="https://www.gnome.org/">GNOME Project</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
+    {# TODO Add Twisted, OpenSSL, etc. versions #}
     <h2>License</h2>
-    <p>Copyright © 2013, 2014, 2015 Tom Most
+    <p>Copyright © 2013, 2014, 2015, 2016, 2017 Tom Most
     <p>This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
