--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -2,21 +2,17 @@
 <!DOCTYPE html>
 <html lang="en_US">
     <head>
-        <title>{% block title %}{{ title }}{% endblock %}</title>
+        <title>{% block title %}{{ title|default:"Yarrharr" }}{% endblock %}</title>
+        {# XXX Does user-scalable=no do anything anymore? #}
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{% static 'icon.ico' %}">
         <link rel="icon" sizes="152x152" type="image/png" href="{% static 'icon.touch.png' %}">
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon.touch.png' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'yarrharr.css' %}">
-        {% block js %}{% endblock %}
+        {# <link rel="stylesheet" type="text/css" href="{% static 'yarrharr.css' %}"> #}
         <script>
-        if (window.$) {
-            $(function() {
-                $('.yarr_content').on('click', 'img', function(e) {
-                    $('<div style="color:blue">').text(e.target.title).insertAfter(e.target);
-                });
-            });
-        }
+            var __webpack_public_path__ = "{% static '' %}";
+            {# FIXME This stub prevents JS errors caused by loading the bundle on pages it doesn't render. #}
+            var props = {articlesById: {}, feedsById: {}, labelsById: {}};
         </script>
     </head>
     <body>
@@ -31,9 +27,9 @@
             {% block content %}{% endblock %}
         </main>
         <footer>
-            <p>Yarrharr Feed Reader ∙ © 2013–2016 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'about' %}">About</a>
-            <br>
-            <a href="https://www.gnome.org/" target="_blank">Icons by the GNOME Project</a> ∙  <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">CC BY-SA 3.0 US</a>
+            <p>Yarrharr Feed Reader ∙ © 2013–2017 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'about' %}">About</a>
         </footer>
+        {# FIXME Extract the CSS from this bundle to avoid FOUC. #}
+        <script src="{% static 'bundle.js' %}"></script>
     </body>
 </html>
