Update to the latest Webpack and Babel
Closes #53.

--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -8,12 +8,13 @@
         <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{% static 'icon.ico' %}">
         <link rel="icon" sizes="152x152" type="image/png" href="{% static 'icon.touch.png' %}">
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon.touch.png' %}">
-        {# <link rel="stylesheet" type="text/css" href="{% static 'yarrharr.css' %}"> #}
+        <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
         <script>
             var __webpack_public_path__ = "{% static '' %}";
             {# FIXME This stub prevents JS errors caused by loading the bundle on pages it doesn't render. #}
             var props = {articlesById: {}, feedsById: {}, labelsById: {}};
         </script>
+        <script src="{% static 'main.js' %}" defer></script>
     </head>
     <body>
         <main role=main>
@@ -29,7 +30,5 @@
         <footer>
             <p>Yarrharr Feed Reader ∙ © 2013–2017 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'about' %}">About</a>
         </footer>
-        {# FIXME Extract the CSS from this bundle to avoid FOUC. #}
-        <script src="{% static 'bundle.js' %}"></script>
     </body>
 </html>
