Update normalize.css to 7.0.0
Closes #57.

--- a/assets/base.less
+++ b/assets/base.less
@@ -1,7 +1,7 @@
 /**
  * Global base styles for the Yarrharr UI.
  */
-@import (less) "./normalize.css/normalize.css";
+@import "~normalize.css/normalize.css";
 @import "./globals.less";
 
 html {
