--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load static_glob %}
 <!DOCTYPE html>
 <html lang="en_US">
     <head>
@@ -8,13 +9,17 @@
         <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{% static 'icon.ico' %}">
         <link rel="icon" sizes="152x152" type="image/png" href="{% static 'icon.touch.png' %}">
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon.touch.png' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
+        {% for path in 'main.*.css'|static_glob %}
+        <link rel="stylesheet" type="text/css" href="{% static path %}">
+        {% endfor %}
         <script>
             var __webpack_public_path__ = "{% static '' %}";
             {# FIXME This stub prevents JS errors caused by loading the bundle on pages it doesn't render. #}
             var props = {articlesById: {}, feedsById: {}, labelsById: {}};
         </script>
-        <script src="{% static 'main.js' %}" defer></script>
+        {% for path in 'main.*.js'|static_glob %}
+        <script src="{% static path %}" defer></script>
+        {% endfor %}
     </head>
     <body>
         <main role=main>
