--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -9,20 +9,14 @@
         <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{% static 'icon.ico' %}">
         <link rel="icon" sizes="152x152" type="image/png" href="{% static 'icon.touch.png' %}">
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon.touch.png' %}">
-        {% for path in 'main.*.css'|static_glob %}
-        <link rel="stylesheet" type="text/css" href="{% static path %}">
-        {% endfor %}
+        <link rel="stylesheet" type="text/css" href="{% static 'main.*.css'|newest_static %}">
         <script>
             var __webpack_public_path__ = "{% static '' %}";
             {# FIXME This stub prevents JS errors caused by loading the bundle on pages it doesn't render. #}
             var props = {articlesById: {}, feedsById: {}, labelsById: {}};
         </script>
-        {% for path in 'vendor.*.js'|static_glob %}
-        <script src="{% static path %}" defer></script>
-        {% endfor %}
-        {% for path in 'main.*.js'|static_glob %}
-        <script src="{% static path %}" defer></script>
-        {% endfor %}
+        <script src="{% static 'vendor.*.js'|newest_static %}" defer></script>
+        <script src="{% static 'main.*.js'|newest_static %}" defer></script>
     </head>
     <body>
         <main role=main>
