Scope article views to a snapshot
Remove ArticleView as a separate entity. Now articles are only viewed
in the context of a snapshot, be that all, a feed, or a label. Add
next/prev links to allow easy navigation through the list.

--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -4,3 +4,14 @@
     padding: 0;
 }
 
+.prev-link,
+.next-link {
+    margin: 0 auto;
+    a { padding: 4px; }
+    a, b { display: block; }
+}
+
+.layout-narrow .prev-link,
+.layout-narrow .next-link {
+    max-width: calc(40px + 34em);
+}
