Rework view controls
* Remove the dropdown menu in favor of inline controls.
* Page width controls remain in the upper-right. They should probably
  be adjusted to be more compact, or maybe the whole concept removed
  entirely? I seldom use narrow width.)
* Ordering controls have been changed to links and moved inline with
  the filter links. This is making the grouping of those links even
  less clear—follow-up is needed.

Closes #48.

--- a/assets/widgets/ViewControls.less
+++ b/assets/widgets/ViewControls.less
@@ -1,18 +1,10 @@
 @import "../globals.less";
 
-.view-picker {
-    h2 {
-        font: inherit;
-        margin: 0;
-        padding: 0;
-    }
-    .group {
-        display: flex;
-        flex-flow: row wrap;
-        margin: 0 0 12px 0;
+.view-controls {
+    display: flex;
+    flex-flow: row;
 
-        & > .invisible-button {
-            margin-right: 8px;
-        }
+    & > a {
+        margin: 0 8px 0 0;
     }
 }
