--- a/assets/globals.less
+++ b/assets/globals.less
@@ -122,3 +122,9 @@
         align-self: end;
     }
 }
+
+footer {
+    margin: 3em 0.25em;
+    text-align: center;
+    color: lighten(@text_color, 40%);
+}
