--- a/assets/views/RootView.less
+++ b/assets/views/RootView.less
@@ -33,7 +33,7 @@
                     text-overflow: ellipsis;
                 }
             }
-            .saved-link {
+            .fave-link {
                 align-self: flex-start;
                 flex: 0 0 48px;
                 text-decoration: none !important;
@@ -45,7 +45,7 @@
                     top: 0;
                     left: 0;
                 }
-                .saved-count {
+                .fave-count {
                     position: absolute;
                     top: 2px;
                     left: 0;
