Define @narrow_width to reduce duplication

--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -13,5 +13,5 @@
 
 .layout-narrow .prev-link,
 .layout-narrow .next-link {
-    max-width: calc(40px + 34em);
+    max-width: calc(40px + @narrow_width);
 }
