--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -1,7 +1,7 @@
 @import "../globals.less";
 
 .layout-narrow .article-wrap {
-    max-width: calc(40px + 34em);
+    max-width: calc(40px + @narrow_width);
 }
 
 .layout-wide .article-wrap {
