--- a/assets/globals.less
+++ b/assets/globals.less
@@ -16,7 +16,7 @@
 @logo_orange: #fb6500;
 @logo_orange_dark: #da5200;
 
-@narrow_width: 50em;
+@narrow_width: 50rem;
 
 :focus {
     outline: 1px dotted;
