Move entirely to toggle links
* Switch the list view to use ReadToggleLink.
* Remove the (now) unused ReadToggle and FaveToggle.
* Make the toggle buttons accessible by making them links. Closes #2.

--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -6,17 +6,23 @@
     flex-flow: row nowrap;
     margin: 4px 0;
     align-items: center;
-    .content-colors;
 
     & > .button {
         margin: 0 4px;
+    }
+
+    a {
+        padding: 4px;
+    }
+    a > img {
+        display: block;
     }
 
     a.view-link {
         flex: 1 1 100%;
         min-width: 0;
         display: block;
-        padding: 4px;
+        .content-colors;
 
         white-space: nowrap;
         text-overflow: ellipsis;
