Remove gutter width buffer
There is no gutter any more, so no need to allocate space for it.

--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -6,7 +6,7 @@
 
 .layout-narrow .top-bar,
 .layout-narrow .bottom-bar {
-    max-width: calc(40px + @narrow_width);
+    max-width: @narrow_width;
     margin: 0 auto;
 }
 
