--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -7,7 +7,7 @@
     }
 
     .feed-wrap.narrow {
-        max-width: calc(40px + @narrow_width);
+        max-width: @narrow_width;
     }
 
     .feed-info {
