--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -63,7 +63,7 @@ article > * {
 }
 
 .layout-narrow article > * {
-    max-width: calc(40px + @narrow_width);
+    max-width: @narrow_width;
     margin-left: auto;
     margin-right: auto;
 }
