--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -30,6 +30,7 @@
             {% block content %}{% endblock %}
         </main>
         <footer>
+            <p><a href="{% url 'home' %}">Home</a> ∙ <a href="{% url 'logout' %}">Log out</a>
             <p>Yarrharr Feed Reader ∙ © 2013–2017 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'about' %}">About</a>
         </footer>
     </body>
