--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -93,10 +93,14 @@
     }
 }
 
+.layout-narrow .form {
+    margin: 0 auto;
+    max-width: @narrow_width;
+}
+
 .add-feed-view {
     .form {
         .content-colors;
-        margin: 2px;
         padding: 4px;
 
         form {
