--- a/assets/globals.less
+++ b/assets/globals.less
@@ -1,5 +1,7 @@
 /**
  * Global variable definitions.
+ *
+ * This file must not contain any concrete styles.
  */
 
 @background_color: rgba(250, 250, 250, 1.0);
@@ -17,10 +19,6 @@
 @logo_orange_dark: #da5200;
 
 @narrow_width: 50rem;
-
-:focus {
-    outline: 1px dotted;
-}
 
 .content-colors() {
     color: @content_text_color;
@@ -41,100 +39,17 @@
     }
 }
 
-/* A "floater" is centered and is horizontally centered.  Mainly used for
- * mastheads and error messages. */
-.floater-wrap {
-    display: flex;
-    margin: 16px 4px;
-}
-.floater {
-    text-align: center;
-    margin: 0 auto;
-    padding: 8px 16px;
-    color: @content_text_color;
-    background: @content_background_color;
-    max-width: @narrow_width;
-}
-
-/* A button is round, subtly 3D, and features a centered icon. */
-.button {
+.flat-button() {
     display: block;
-    width: 40px;
-    height: 40px;
-    margin: 0 0 4px 0;
-    padding: 0;
-    border: 0;
-    border-radius: 50%;
-    background: linear-gradient(to bottom, @background_color, darken(@background_color, 10%));
-    box-shadow: inset  1px  1.0px 3.5px lighten(@background_color, 10%),
-                inset -1px -1.0px 3.5px darken(@background_color, 20%);
-
-    img {
-        display: block;
-        width: 24px;
-        height: 24px;
-        padding: 8px;
-    }
-}
-
-.button:active, .button-active {
-    background: linear-gradient(to top, @background_color, darken(@background_color, 10%));
-    box-shadow: inset  1px  1.0px 3.5px darken(@background_color, 20%),
-    inset -1px -1.0px 3.5px lighten(@background_color, 10%);
-    & > * {
-        transform: translate(1px, 1px);
-    }
-}
-
-/* Due to limitations of <button> it can't be made display: flex.  The
- * workaround is to stick a <div> inside it.  This just zeros out the button
- * styles.  See <https://bugzilla.mozilla.org/show_bug.cgi?id=984869#c2>. */
-.invisible-button {
-    margin: 0;
-    padding: 0;
-    border: 0;
+    border: 2px solid @background_color;
     background: transparent;
+    border-radius: 4px;
+    transition: border-color 0.1s, background 0.2s;
+    text-decoration: none;
 }
 
-.layout-narrow .bar {
-    max-width: @narrow_width;
-    margin: 0 auto;
-}
-
-.bar {
-    display: flex;
-    justify-content: space-between;
-    height: 44px;
-    contain: size layout style;
-
-    & > * {
-        display: block;
-        border: 2px solid @background_color;
-        border-radius: 4px;
-        transition: border-color 0.1s, background 0.2s;
-        text-decoration: none;
-    }
-
-    & > a[href]:focus {
-        outline: none;
-        border-color: darken(@background_color, 10%);
-        background-color: darken(@background_color, 10%);
-    }
-
-    & > * > img {
-        display: block;
-    }
-
-    & > .expand {
-        flex: 1 1 0;
-        min-width: 0; /* allow shrinking below content size */
-    }
-}
-
-
-
-footer {
-    margin: 3em 0.25em;
-    text-align: center;
-    color: lighten(@text_color, 40%);
+.flat-button-focus() {
+    outline: none;
+    border-color: darken(@background_color, 10%);
+    background-color: darken(@background_color, 10%);
 }
