--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -30,7 +30,9 @@
             {% block content %}{% endblock %}
         </main>
         <footer>
-            <p><a href="{% url 'home' %}">Home</a> ∙ <a href="{% url 'logout' %}">Log out</a>
+            {% if user.is_authenticated %}
+                <p><a href="{% url 'home' %}">Home</a> ∙ <a href="{% url 'logout' %}">Log out</a>
+            {% endif %}
             <p>Yarrharr Feed Reader ∙ © 2013–2017 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'about' %}">About</a>
         </footer>
     </body>
