--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -7,8 +7,9 @@
     margin: 4px 0;
     align-items: center;
 
-    & > .button {
-        margin: 0 4px;
+    a[role=button], .outbound {
+        .flat-button;
+        &:focus { .flat-button-focus; }
     }
 
     a {
