contain: strict for list items
There are a lot of them. This should make layout easier.

--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -3,6 +3,7 @@
 .list-article {
     height: 48px;
     display: flex;
+    contain: strict;
     flex-flow: row nowrap;
     margin: 4px 0;
     align-items: center;
